--- a/nike.html
+++ b/nike.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="./Nike1.png" type="image/x-icon">
     <meta name="keywords" content="Nike, Nike shoes, black nike shoes, nike kids shoes, shoes for men nike, nike women shoes">
     <meta name="description" content="A sleek Nike-inspired landing page showcasing the latest sneaker collections with bold visuals, smooth animations, and a modern minimalist design.">
+    <meta name="google-site-verification" content="Ea6dcq2IhQkPyICL9XGnMQVKiY7tLoDAGY55zwO8mPY" />
 </head>
 
 <body>
